@@ -40,7 +40,8 @@ sc8pr 2.2.dev...
 ** Fix minor bug with 'Sketch.caption' getter
 *** Add 'Ellipse' and 'Arc' classes to 'sc8pr.shape'
 *** Add 'sprite.onreset' event, called by 'sprite.ondraw'
-*** Add 'Video.splice' and 'Video.info'
+*** Add 'Video' methods 'splice', 'info', '__add__', 'effect', 'effectInPlace'
+*** 'Video.clip' accepts negative 'start' and 'end' arguments
 *** 'Plot' constructor can take an object with 'size' attribute in place of a size literal
 *** 'Plot.clockwise' property
 *** Add 'sc8pr.geom.smallAngle'
